# Relizene_weather

./: .gitignore  LICENSE  README.MD  README.md  q  requirements.txt  setup.cfg
doc/: doc_en.md  doc_ru.markdown
relizene_weather/: __init__.py  api_call.py  main.py
relizene_weather/settings/: __init__.py  settings.py  validator.py
tests/: first_test.py
