[metadata]
name='weather_api_relizene',
version='1.0.0',
author='Relizene',
author_email='vovaegorov689@gmail.com',
description='This is my module for work API',
long_description=readme(),
long_description_content_type='text/markdown',
url='https://github.com/relizene',
license= 'MIT',
install_requires=['requests>=2.25.1'],
classifiers=[
    'Programming Language :: Python :: 3.13',
    'License :: Vladimir Egorov',
    'Operating System :: OS Independent'
  ],

[option]
pakage_dir='relizene_weather'
pakages = find:
python_requires='>=3.7'
install_requires =  'requests>=2.25.1'
                    'numpy>=1.20.0'
[options.packages.find]
where = 'relizene_weather'

[options.extras_require]
dev =  # Доп. зависимости для разработки
    'pytest>=6.0'
    'black>=20.8b1'
