[metadata]
name = relizene-weather
version = 1.0.0  
author = Relizene
author_email = vovaegorov689@gmail.com
description = Python weather module with city validation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/relizene/Relizene_weather
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = relizene_weather
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.25
    geopy>=2.0

[options.packages.find]
where = relizene_weather